crates/efr-render/src/diff_rows/snapshots/efr_render__diff_rows__tests__colour_80.snap
---
source: crates/efr-render/src/diff_rows/tests.rs
expression: shown(&rows)
---
\e[1m--- a/src/main.rs\e[0m

\e[1m+++ b/src/main.rs\e[0m

\e[36m@@ -1,3 +1,3 @@\e[0m

 \e[35mfn\e[0m \e[34mmain\e[0m() {

\e[1;31m-\e[0m    println!(\e[32m"old"\e[0m);

\e[1;32m+\e[0m    println!(\e[32m"a new line that is much longer than forty columns"\e[0m);

 }
